# shape-classifier

./: README.md  environment.yml  mypy.ini  pyproject.toml
config/: experiments.yml
notebooks/: preprocess.ipynb  vis_aug.ipynb
outputs/: .gitignore
scripts/: dataset.py  generate_report.py  load_train.py  preprocess-data.py  scoring.py  test.py  test_model.py  test_model_bad.py  test_model_picked.py  train.py  validation.py  vis_aug.py
shape_classifier/data/datasets/: mcs.py
shape_classifier/data/samplers/: simple_sampler.py
shape_classifier/loss/: focal_loss.py
shape_classifier/models/: simple_classifier.py
shape_classifier/pl/: lightning_data_module.py  lightning_module.py
shape_classifier/utils/: utils.py
